<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background">

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".4"
            android:background="@drawable/background_fade">

        </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_16"
            android:layout_marginTop="@dimen/margin_top_16"
            android:layout_marginBottom="@dimen/margin_bottom_16"
            android:orientation="vertical">
            <EditText
                android:id="@+id/key"
                style="@style/Font_family_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_right_16"
                android:layout_marginTop="@dimen/margin_top_8"
                android:layout_marginRight="@dimen/margin_right_16"
                android:layout_marginBottom="@dimen/margin_top_8"
                android:background="@drawable/edit_style"
                android:drawablePadding="@dimen/padding_16"
                android:hint="@string/key_hint"
                android:inputType="text"
                android:gravity="center"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="@dimen/padding_16"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/get_permission"
                style="@style/Font_family_regular"
                android:layout_width="160dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_right_16"
                android:layout_marginTop="@dimen/margin_top_8"
                android:layout_marginRight="@dimen/margin_right_16"
                android:layout_marginBottom="@dimen/margin_top_8"
                android:background="@drawable/red_style"
                android:text="@string/get_permission"
                android:textColor="@color/white"
                android:textSize="@dimen/text_20"
                tools:ignore="SpUsage" />
            <Button
                android:id="@+id/hide"
                style="@style/Font_family_regular"
                android:layout_width="160dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_right_16"
                android:layout_marginTop="@dimen/margin_top_8"
                android:layout_marginRight="@dimen/margin_right_16"
                android:layout_marginBottom="@dimen/margin_top_8"
                android:background="@drawable/red_style"
                android:text="@string/hide"
                android:textColor="@color/white"
                android:textSize="@dimen/text_20"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </ScrollView>
<!--    <TextView-->
<!--        android:id="@+id/latTextView"-->
<!--        android:layout_width="132dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:text="Latitude: "-->
<!--        app:layout_constraintBottom_toTopOf="@+id/lonTextView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.426"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.798" />-->

<!--    <TextView-->
<!--        android:id="@+id/lonTextView"-->
<!--        android:layout_width="126dp"-->
<!--        android:layout_height="35dp"-->
<!--        android:layout_marginEnd="160dp"-->
<!--        android:layout_marginBottom="408dp"-->
<!--        android:text="Longitude: "-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="192dp"-->
<!--        android:layout_marginEnd="176dp"-->
<!--        android:onClick="hide"-->
<!--        android:text="Hide"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/lonTextView"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>