<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background">

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".4"
            android:background="@drawable/background_fade">

        </FrameLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left_16"
                android:layout_marginTop="@dimen/margin_top_16"
                android:layout_marginBottom="@dimen/margin_bottom_16"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
                    style="@style/Font_family_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_right_16"
                    android:layout_marginTop="@dimen/margin_top_8"
                    android:layout_marginRight="@dimen/margin_right_16"
                    android:layout_marginBottom="@dimen/margin_top_8"
                    android:background="@drawable/edit_style"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="@dimen/padding_16"
                    android:hint="@string/user_hint"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="@dimen/padding_16"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/text_20" />


                <EditText
                    android:id="@+id/password"
                    style="@style/Font_family_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_right_16"
                    android:layout_marginTop="@dimen/margin_top_8"
                    android:layout_marginRight="@dimen/margin_right_16"
                    android:layout_marginBottom="@dimen/margin_top_8"
                    android:background="@drawable/edit_style"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="@dimen/padding_16"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/padding_16"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/text_20" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/uq_key"
                        style="@style/Font_family_light"
                        android:layout_marginStart="@dimen/margin_right_16"
                        android:layout_marginTop="@dimen/margin_top_8"
                        android:layout_marginEnd="@dimen/margin_right_16"
                        android:layout_marginBottom="@dimen/margin_top_8"
                        android:background="@drawable/edit_style"
                        android:drawableStart="@drawable/ic_hacker"
                        android:drawablePadding="@dimen/padding_16"
                        android:hint="@string/key_hint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/padding_16"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_20"
                        android:drawableEnd="@drawable/ic_hide"
                        android:textColorHint="@color/white"/>
<!--                <EditText-->
<!--                    android:id="@+id/uq_key"-->
<!--                    style="@style/Font_family_light"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginLeft="@dimen/margin_right_16"-->
<!--                    android:layout_marginTop="@dimen/margin_top_8"-->
<!--                    android:layout_marginRight="@dimen/margin_right_16"-->
<!--                    android:layout_marginBottom="@dimen/margin_top_8"-->
<!--                    android:background="@drawable/edit_style"-->
<!--                    android:drawableStart="@drawable/ic_hacker"-->
<!--                    android:drawablePadding="@dimen/padding_16"-->
<!--                    android:hint="@string/key_hint"-->
<!--                    android:inputType="textPassword"-->
<!--                    android:maxLines="1"-->
<!--                    android:padding="@dimen/padding_16"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textColorHint="@color/white"-->
<!--                    android:textSize="@dimen/text_20"-->
<!--                    android:drawableEnd="@drawable/ic_hide" />-->


                <Button
                    android:id="@+id/log"
                    style="@style/Font_family_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_right_16"
                    android:layout_marginTop="@dimen/margin_top_8"
                    android:layout_marginRight="@dimen/margin_right_16"
                    android:layout_marginBottom="@dimen/margin_top_8"
                    android:background="@drawable/red_style"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_20"
                    tools:ignore="SpUsage" />


                <!--                <LinearLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginLeft="@dimen/margin_left_16"-->
                <!--                    android:layout_marginTop="@dimen/margin_top_16"-->
                <!--                    android:layout_marginRight="@dimen/margin_right_16"-->
                <!--                    android:layout_marginBottom="@dimen/margin_bottom_16"-->
                <!--                    android:orientation="horizontal">-->

                <!--                    <TextView-->
                <!--                        android:layout_width="0dp"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:layout_marginLeft="@dimen/margin_left_16"-->
                <!--                        android:layout_marginRight="@dimen/margin_right_16"-->
                <!--                        android:layout_marginBottom="@dimen/margin_bottom_8"-->
                <!--                        android:layout_weight="1"-->
                <!--                        android:fontFamily="sans-serif-regular"-->
                <!--                        android:gravity="start"-->
                <!--                        android:paddingTop="@dimen/padding_16"-->
                <!--                        android:paddingBottom="@dimen/padding_16"-->
                <!--                        android:text="@string/create_account"-->
                <!--                        android:textColor="@color/white"-->
                <!--                        android:textSize="@dimen/text_20" />-->

                <!--                    <TextView-->
                <!--                        android:layout_width="0dp"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:layout_marginLeft="@dimen/margin_left_16"-->
                <!--                        android:layout_marginRight="@dimen/margin_right_16"-->
                <!--                        android:layout_marginBottom="@dimen/margin_bottom_8"-->
                <!--                        android:layout_weight="1"-->
                <!--                        android:fontFamily="sans-serif-regular"-->
                <!--                        android:gravity="end"-->
                <!--                        android:paddingTop="@dimen/padding_16"-->
                <!--                        android:paddingBottom="@dimen/padding_16"-->
                <!--                        android:text="Need Help?"-->
                <!--                        android:textColor="@color/white"-->
                <!--                        android:textSize="@dimen/text_20" />-->


                <!--                </LinearLayout>-->

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>